[tool.poetry]
name = "keep-up"
version = "0.1.0"
description = "Use LLMs to curate and summarize blogs and news sites."
authors = ["Alex Lee (aviidlee) <alex.lee@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
huggingface-hub = "^0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
